--- a/financial.css
+++ b/financial.css
@@ -1,6 +1,36 @@
-#new-transaction-form {
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-basis: 75px;
+    flex-wrap: wrap; 
+}
+li {
+    outline: black solid 2px;
+    padding: 4px;
+    margin: 4px;
+}
+h5 {
+    font-size: 1.5em;
+    margin: 8px 0px;
+}
+
+/* #new-transaction-form {
     display: none;
 }
 body[data-mode="add"] #file-form {
     display: none;
-}
+} */
