--- a/financial.css
+++ b/financial.css
@@ -27,6 +27,9 @@ h5 {
     font-size: 1.5em;
     margin: 8px 0px;
 }
+.material-icons {
+    font-size: 0.5em;
+}
 
 /* #new-transaction-form {
     display: none;
