--- a/client/src/output.css
+++ b/client/src/output.css
@@ -955,15 +955,15 @@ html{
     }
   }
 
-  .btn-outline.btn-accent:hover{
+  .btn-outline.btn-primary:hover{
     --tw-text-opacity: 1;
-    color: var(--fallback-ac,oklch(var(--ac)/var(--tw-text-opacity)));
+    color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
   }
 
   @supports (color: color-mix(in oklab, black, black)){
-    .btn-outline.btn-accent:hover{
-      background-color: color-mix(in oklab, var(--fallback-a,oklch(var(--a)/1)) 90%, black);
-      border-color: color-mix(in oklab, var(--fallback-a,oklch(var(--a)/1)) 90%, black);
+    .btn-outline.btn-primary:hover{
+      background-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
+      border-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
     }
   }
 
@@ -1162,11 +1162,6 @@ html{
   min-width: 4rem;
 }
 
-.tabs{
-  display: grid;
-  align-items: flex-end;
-}
-
 .table{
   position: relative;
   width: 100%;
@@ -1228,15 +1223,15 @@ html{
     border-color: var(--btn-color, var(--fallback-b2));
   }
 
-  .btn-accent{
-    --btn-color: var(--fallback-a);
+  .btn-primary{
+    --btn-color: var(--fallback-p);
   }
 }
 
 @supports (color: color-mix(in oklab, black, black)){
-  .btn-outline.btn-accent.btn-active{
-    background-color: color-mix(in oklab, var(--fallback-a,oklch(var(--a)/1)) 90%, black);
-    border-color: color-mix(in oklab, var(--fallback-a,oklch(var(--a)/1)) 90%, black);
+  .btn-outline.btn-primary.btn-active{
+    background-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
+    border-color: color-mix(in oklab, var(--fallback-p,oklch(var(--p)/1)) 90%, black);
   }
 }
 
@@ -1246,16 +1241,16 @@ html{
   outline-offset: 2px;
 }
 
-@supports (color: oklch(0% 0 0)){
-  .btn-accent{
-    --btn-color: var(--a);
-  }
+.btn-primary{
+  --tw-text-opacity: 1;
+  color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
+  outline-color: var(--fallback-p,oklch(var(--p)/1));
 }
 
-.btn-accent{
-  --tw-text-opacity: 1;
-  color: var(--fallback-ac,oklch(var(--ac)/var(--tw-text-opacity)));
-  outline-color: var(--fallback-a,oklch(var(--a)/1));
+@supports (color: oklch(0% 0 0)){
+  .btn-primary{
+    --btn-color: var(--p);
+  }
 }
 
 .btn.glass{
@@ -1286,14 +1281,14 @@ html{
   background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
 }
 
-.btn-outline.btn-accent{
+.btn-outline.btn-primary{
   --tw-text-opacity: 1;
-  color: var(--fallback-a,oklch(var(--a)/var(--tw-text-opacity)));
+  color: var(--fallback-p,oklch(var(--p)/var(--tw-text-opacity)));
 }
 
-.btn-outline.btn-accent.btn-active{
+.btn-outline.btn-primary.btn-active{
   --tw-text-opacity: 1;
-  color: var(--fallback-ac,oklch(var(--ac)/var(--tw-text-opacity)));
+  color: var(--fallback-pc,oklch(var(--pc)/var(--tw-text-opacity)));
 }
 
 .btn.btn-disabled,
@@ -1871,6 +1866,10 @@ html{
   z-index: 1;
 }
 
+.m-8{
+  margin: 2rem;
+}
+
 .mt-3{
   margin-top: 0.75rem;
 }
@@ -1881,6 +1880,10 @@ html{
 
 .table{
   display: table;
+}
+
+.h-16{
+  height: 4rem;
 }
 
 .h-5{
@@ -1897,14 +1900,6 @@ html{
 
 .w-52{
   width: 13rem;
-}
-
-.w-auto{
-  width: auto;
-}
-
-.w-full{
-  width: 100%;
 }
 
 .grow{
@@ -1927,8 +1922,12 @@ html{
   justify-content: center;
 }
 
-.gap-20{
-  gap: 5rem;
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .self-center{
@@ -1943,8 +1942,8 @@ html{
   border-radius: var(--rounded-box, 1rem);
 }
 
-.border{
-  border-width: 1px;
+.border-2{
+  border-width: 2px;
 }
 
 .border-accent{
@@ -1961,9 +1960,26 @@ html{
   padding: 0.5rem;
 }
 
+.p-4{
+  padding: 1rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.underline{
+  text-decoration-line: underline;
 }
 
 .shadow{
@@ -1974,11 +1990,6 @@ html{
 
 * {
   font-family: Arial, Helvetica, sans-serif;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
 }
 
 .recharts-wrapper {
