--- a/client/src/output.css
+++ b/client/src/output.css
@@ -725,71 +725,78 @@ html{
   --btn-focus-scale: 1;
 }
 
-[data-theme=dim]{
+[data-theme=black]{
   color-scheme: dark;
-  --pc: 17.2267% 0.028331 139.549991;
-  --sc: 14.6752% 0.033181 35.353059;
-  --ac: 14.8459% 0.026728 311.37924;
-  --inc: 17.2157% 0.028409 206.182959;
-  --suc: 17.2343% 0.028437 166.534048;
-  --wac: 17.2327% 0.028447 94.818679;
-  --erc: 16.4838% 0.019914 33.756357;
-  --rounded-box: 1rem;
-  --rounded-btn: 0.5rem;
-  --rounded-badge: 1.9rem;
-  --animation-btn: 0.25s;
-  --animation-input: .2s;
-  --btn-focus-scale: 0.95;
+  --pc: 86.736% 0 0;
+  --sc: 86.736% 0 0;
+  --ac: 86.736% 0 0;
+  --nc: 86.736% 0 0;
+  --inc: 89.0403% 0.062643 264.052021;
+  --suc: 90.395% 0.035372 142.495339;
+  --wac: 19.3597% 0.042201 109.769232;
+  --erc: 12.5591% 0.051537 29.233885;
   --border-btn: 1px;
   --tab-border: 1px;
-  --tab-radius: 0.5rem;
-  --p: 86.1335% 0.141656 139.549991;
-  --s: 73.3759% 0.165904 35.353059;
-  --a: 74.2296% 0.133641 311.37924;
-  --n: 24.7311% 0.020483 264.094728;
-  --nc: 82.9011% 0.031335 222.959324;
-  --b1: 30.8577% 0.023243 264.149498;
-  --b2: 28.0368% 0.01983 264.182074;
-  --b3: 26.3469% 0.018403 262.177739;
-  --bc: 82.9011% 0.031335 222.959324;
-  --in: 86.0785% 0.142046 206.182959;
-  --su: 86.1717% 0.142187 166.534048;
-  --wa: 86.1634% 0.142236 94.818679;
-  --er: 82.4189% 0.09957 33.756357;
+  --p: 33.6799% 0 0;
+  --s: 33.6799% 0 0;
+  --a: 33.6799% 0 0;
+  --b1: 0% 0 0;
+  --b2: 19.1251% 0 0;
+  --b3: 26.8618% 0 0;
+  --bc: 87.6096% 0 0;
+  --n: 33.6799% 0 0;
+  --in: 45.2014% 0.313214 264.052021;
+  --su: 51.9752% 0.176858 142.495339;
+  --wa: 96.7983% 0.211006 109.769232;
+  --er: 62.7955% 0.257683 29.233885;
+  --rounded-box: 0;
+  --rounded-btn: 0;
+  --rounded-badge: 0;
+  --animation-btn: 0;
+  --animation-input: 0;
+  --btn-focus-scale: 1;
+  --tab-radius: 0;
 }
 
-:root:has(input.theme-controller[value=dim]:checked){
+:root:has(input.theme-controller[value=black]:checked){
   color-scheme: dark;
-  --pc: 17.2267% 0.028331 139.549991;
-  --sc: 14.6752% 0.033181 35.353059;
-  --ac: 14.8459% 0.026728 311.37924;
-  --inc: 17.2157% 0.028409 206.182959;
-  --suc: 17.2343% 0.028437 166.534048;
-  --wac: 17.2327% 0.028447 94.818679;
-  --erc: 16.4838% 0.019914 33.756357;
-  --rounded-box: 1rem;
-  --rounded-btn: 0.5rem;
-  --rounded-badge: 1.9rem;
-  --animation-btn: 0.25s;
-  --animation-input: .2s;
-  --btn-focus-scale: 0.95;
+  --pc: 86.736% 0 0;
+  --sc: 86.736% 0 0;
+  --ac: 86.736% 0 0;
+  --nc: 86.736% 0 0;
+  --inc: 89.0403% 0.062643 264.052021;
+  --suc: 90.395% 0.035372 142.495339;
+  --wac: 19.3597% 0.042201 109.769232;
+  --erc: 12.5591% 0.051537 29.233885;
   --border-btn: 1px;
   --tab-border: 1px;
-  --tab-radius: 0.5rem;
-  --p: 86.1335% 0.141656 139.549991;
-  --s: 73.3759% 0.165904 35.353059;
-  --a: 74.2296% 0.133641 311.37924;
-  --n: 24.7311% 0.020483 264.094728;
-  --nc: 82.9011% 0.031335 222.959324;
-  --b1: 30.8577% 0.023243 264.149498;
-  --b2: 28.0368% 0.01983 264.182074;
-  --b3: 26.3469% 0.018403 262.177739;
-  --bc: 82.9011% 0.031335 222.959324;
-  --in: 86.0785% 0.142046 206.182959;
-  --su: 86.1717% 0.142187 166.534048;
-  --wa: 86.1634% 0.142236 94.818679;
-  --er: 82.4189% 0.09957 33.756357;
+  --p: 33.6799% 0 0;
+  --s: 33.6799% 0 0;
+  --a: 33.6799% 0 0;
+  --b1: 0% 0 0;
+  --b2: 19.1251% 0 0;
+  --b3: 26.8618% 0 0;
+  --bc: 87.6096% 0 0;
+  --n: 33.6799% 0 0;
+  --in: 45.2014% 0.313214 264.052021;
+  --su: 51.9752% 0.176858 142.495339;
+  --wa: 96.7983% 0.211006 109.769232;
+  --er: 62.7955% 0.257683 29.233885;
+  --rounded-box: 0;
+  --rounded-btn: 0;
+  --rounded-badge: 0;
+  --animation-btn: 0;
+  --animation-input: 0;
+  --btn-focus-scale: 1;
+  --tab-radius: 0;
 }
+
+.avatar.placeholder > div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (hover:hover){
   .label a:hover{
     --tw-text-opacity: 1;
@@ -2403,6 +2410,11 @@ html{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-xl{
